--- a/projects/mona-ui/src/lib/date-inputs/date-picker/date-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/date-picker/date-picker.component.html
@@ -1,8 +1,8 @@
-<input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly()"
+<input monaTextBox class="mona-input-inner" [disabled]="disabled()" [readonly]="readonly()"
        [ngModel]="currentDateString()"
        (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
 <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()"
-        [disabled]="disabled" [tabindex]="-1">
+        [disabled]="disabled()" [tabindex]="-1">
     <fa-icon [icon]="dateIcon"></fa-icon>
 </button>
 
