--- a/projects/mona-ui/src/lib/layout/scroll-view/components/scroll-view/scroll-view.component.html
+++ b/projects/mona-ui/src/lib/layout/scroll-view/components/scroll-view/scroll-view.component.html
@@ -4,7 +4,7 @@
             @if ($index === index()) {
                 <li [@.disabled]="lastDirection==='none'"
                     [@slideInOut]="{value: '', params:{start: lastDirection==='right'?'+':'-',end: lastDirection==='right'?'-':'+'}}">
-                    <ng-container [ngTemplateOutlet]="contentTemplate"
+                    <ng-container [ngTemplateOutlet]="contentTemplate()??null"
                                   [ngTemplateOutletContext]="{$implicit: item.data}"></ng-container>
                 </li>
             }
