--- a/projects/mona-ui/src/lib/layout/tab-strip/components/tab-strip/tab-strip.component.html
+++ b/projects/mona-ui/src/lib/layout/tab-strip/components/tab-strip/tab-strip.component.html
@@ -14,8 +14,8 @@
                 <li [ngClass]="{'mona-tab-active': tab.selected(), 'mona-disabled': tab.disabled()}"
                     (click)="onTabClick(tab, tabListElement)">
                     <div class="mona-tab-title">
-                        @if (tab.titleTemplate) {
-                            <ng-container [ngTemplateOutlet]="tab.titleTemplate"></ng-container>
+                        @if (tab.titleTemplate()) {
+                            <ng-container [ngTemplateOutlet]="tab.titleTemplate()??null"></ng-container>
                         } @else {
                             <span>{{ tab.title() }}</span>
                         }
