--- a/projects/mona-ui/src/lib/list-view/components/list-view/list-view.component.html
+++ b/projects/mona-ui/src/lib/list-view/components/list-view/list-view.component.html
@@ -1,30 +1,30 @@
 <div class="mona-list-container">
     <mona-list [data]="viewItems()" [height]="height()" [width]="width()">
-        @if (footerTemplate) {
+        @if (footerTemplate()) {
             <ng-template monaListFooterTemplate>
-                <ng-container [ngTemplateOutlet]="footerTemplate"></ng-container>
+                <ng-container [ngTemplateOutlet]="footerTemplate()??null"></ng-container>
             </ng-template>
         }
-        @if (groupHeaderTemplate) {
+        @if (groupHeaderTemplate()) {
             <ng-template monaListGroupHeaderTemplate let-groupHeader>
-                <ng-container [ngTemplateOutlet]="groupHeaderTemplate"
+                <ng-container [ngTemplateOutlet]="groupHeaderTemplate()??null"
                               [ngTemplateOutletContext]="{$implicit: groupHeader}"></ng-container>
             </ng-template>
         }
-        @if (headerTemplate) {
+        @if (headerTemplate()) {
             <ng-template monaListHeaderTemplate>
-                <ng-container [ngTemplateOutlet]="headerTemplate"></ng-container>
+                <ng-container [ngTemplateOutlet]="headerTemplate()??null"></ng-container>
             </ng-template>
         }
-        @if (itemTemplate) {
+        @if (itemTemplate()) {
             <ng-template monaListItemTemplate let-dataItem>
-                <ng-container [ngTemplateOutlet]="itemTemplate"
+                <ng-container [ngTemplateOutlet]="itemTemplate()??null"
                               [ngTemplateOutletContext]="{$implicit: dataItem}"></ng-container>
             </ng-template>
         }
-        @if (noDataTemplate) {
+        @if (noDataTemplate()) {
             <ng-template monaListNoDataTemplate>
-                <ng-container [ngTemplateOutlet]="noDataTemplate"></ng-container>
+                <ng-container [ngTemplateOutlet]="noDataTemplate()??null"></ng-container>
             </ng-template>
         }
     </mona-list>
