fix: remove unused/unnecessary directives

--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -22,9 +22,7 @@
 <ng-template #popupTemplate>
     <div class="mona-dropdown-popup-list-wrapper">
         <mona-list [maxHeight]="200"
-                   (itemSelect)="onItemSelect($event)"
-                   [monaListSelectable]="selectableOptions"
-                   (selectedKeysChange)="onSelectedKeysChange($event)">
+                   (itemSelect)="onItemSelect($event)">
             @if (footerTemplate) {
                 <ng-template monaListFooterTemplate>
                     <ng-container [ngTemplateOutlet]="footerTemplate"></ng-container>
