--- a/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-tree/components/drop-down-tree/drop-down-tree.component.html
@@ -7,9 +7,9 @@
 
 <ng-template #popupTemplate>
     <div class="mona-dropdown-tree-popup-wrapper">
-        @if (headerTemplate) {
+        @if (headerTemplate()) {
             <div class="mona-dropdown-tree-header">
-                <ng-container [ngTemplateOutlet]="headerTemplate"></ng-container>
+                <ng-container [ngTemplateOutlet]="headerTemplate()??null"></ng-container>
             </div>
         }
         @if (treeService.filterableOptions().enabled) {
@@ -22,25 +22,25 @@
         }
         <div class="mona-dropdown-tree-container">
             @if (treeService.nodeSet().length === 0) {
-                @if (!noDataTemplate) {
+                @if (!noDataTemplate()) {
                     <mona-placeholder [text]="'No data'"></mona-placeholder>
                 } @else {
-                    <ng-container [ngTemplateOutlet]="noDataTemplate"></ng-container>
+                    <ng-container [ngTemplateOutlet]="noDataTemplate()??null"></ng-container>
                 }
             } @else {
                 <mona-tree>
-                    @if (nodeTemplate) {
+                    @if (nodeTemplate()) {
                         <ng-template monaTreeNodeTemplate let-dataItem>
-                            <ng-container [ngTemplateOutlet]="nodeTemplate"
+                            <ng-container [ngTemplateOutlet]="nodeTemplate()??null"
                                           [ngTemplateOutletContext]="{$implicit: dataItem}"></ng-container>
                         </ng-template>
                     }
                 </mona-tree>
             }
         </div>
-        @if (footerTemplate) {
+        @if (footerTemplate()) {
             <div class="mona-dropdown-tree-footer">
-                <ng-container [ngTemplateOutlet]="footerTemplate"></ng-container>
+                <ng-container [ngTemplateOutlet]="footerTemplate()??null"></ng-container>
             </div>
         }
     </div>
