--- a/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
+++ b/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
@@ -102,6 +102,6 @@
     </div>
 }
 <div class="mona-filter-menu-item mona-filter-menu-actions">
-    <button monaButton (click)="onFilterApply()" [disabled]="applyDisabled">Apply</button>
+    <button monaButton (click)="onFilterApply()" [primary]="true" [disabled]="applyDisabled">Apply</button>
     <button monaButton (click)="onFilterClear()">Clear</button>
 </div>
