--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -1,12 +1,12 @@
 <div class="mona-dropdown-value">
-    @if (!valueTemplate) {
+    @if (!valueTemplate()) {
         @if (selectedListItem()) {
             <span>{{valueText()}}</span>
         } @else {
             <span>{{placeholder()}}</span>
         }
     } @else {
-        <ng-container [ngTemplateOutlet]="valueTemplate"
+        <ng-container [ngTemplateOutlet]="valueTemplate()??null"
                       [ngTemplateOutletContext]="{$implicit: selectedDataItem()}"></ng-container>
     }
 </div>
@@ -23,31 +23,31 @@
     <div class="mona-dropdown-popup-list-wrapper">
         <mona-list [maxHeight]="200"
                    (itemSelect)="onItemSelect($event)">
-            @if (footerTemplate) {
+            @if (footerTemplate()) {
                 <ng-template monaListFooterTemplate>
-                    <ng-container [ngTemplateOutlet]="footerTemplate"></ng-container>
+                    <ng-container [ngTemplateOutlet]="footerTemplate()??null"></ng-container>
                 </ng-template>
             }
-            @if (groupHeaderTemplate) {
+            @if (groupHeaderTemplate()) {
                 <ng-template monaListGroupHeaderTemplate let-group>
-                    <ng-container [ngTemplateOutlet]="groupHeaderTemplate"
+                    <ng-container [ngTemplateOutlet]="groupHeaderTemplate()??null"
                                   [ngTemplateOutletContext]="{$implicit: group}"></ng-container>
                 </ng-template>
             }
-            @if (headerTemplate) {
+            @if (headerTemplate()) {
                 <ng-template monaListHeaderTemplate>
-                    <ng-container [ngTemplateOutlet]="headerTemplate"></ng-container>
+                    <ng-container [ngTemplateOutlet]="headerTemplate()??null"></ng-container>
                 </ng-template>
             }
-            @if (itemTemplate) {
+            @if (itemTemplate()) {
                 <ng-template monaListItemTemplate let-dataItem>
-                    <ng-container [ngTemplateOutlet]="itemTemplate"
+                    <ng-container [ngTemplateOutlet]="itemTemplate()??null"
                                   [ngTemplateOutletContext]="{$implicit: dataItem}"></ng-container>
                 </ng-template>
             }
-            @if (noDataTemplate) {
+            @if (noDataTemplate()) {
                 <ng-template monaListNoDataTemplate>
-                    <ng-container [ngTemplateOutlet]="noDataTemplate"></ng-container>
+                    <ng-container [ngTemplateOutlet]="noDataTemplate()??null"></ng-container>
                 </ng-template>
             }
         </mona-list>
