--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -394,14 +394,14 @@
                                               (show)="onPopoverShow($event)" (shown)="onPopoverShownEvent($event)"
                                               (hide)="onPopoverHide($event)" (hidden)="onPopoverHidden()"
                                               title="Popover Title" #popover="monaPopover">
-                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>
-                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>
-                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>
-                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>
-                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>
-<!--                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>-->
-<!--                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>-->
-                                    <div style="padding: 8px 12px;">Are you sure you want to perform this action?</div>
+                                    <div style="padding: 0.25rem; background: black;">
+                                        <mona-scroll-view [width]="480" [height]="270" [data]="scrollViewData"
+                                                          [arrows]="true" [pageable]="true">
+                                            <ng-template let-item>
+                                                <img [src]="item" style="width: 100%; height: 100%;" />
+                                            </ng-template>
+                                        </mona-scroll-view>
+                                    </div>
                                     <ng-template monaPopoverFooterTemplate>
                                         <div style="display: flex; align-items: center; justify-content: flex-end; padding: 4px 12px;">
                                             <button monaButton [primary]="true" (click)="popover.close()" style="margin-right: 4px;">OK</button>
@@ -410,7 +410,7 @@
                                     </ng-template>
                                     <ng-template monaPopoverTitleTemplate>
                                         <div style="display: flex; align-items: center; width: 100%;">
-                                            <span style="color: #00a86b; flex: 1;">Perform Action</span>
+                                            <span style="color: #ffcc75; flex: 1;">Perform Action</span>
                                             <button monaButton [flat]="true" (click)="popover.close()">
                                                 <fa-icon [icon]="closeIcon" style="color: white;"></fa-icon>
                                             </button>
@@ -481,7 +481,7 @@
                                                      (ngModelChange)="onDropdownTreeValueChange($event)"
                                                      [expandedKeys]="dropdownTreeExpandedKeys"
                                                      (expandedKeysChange)="onDropdownTreeExpandedKeysChange($event)"
-                                                     style="width: 220px;" *ngIf="false">
+                                                     style="width: 220px;">
                                     <ng-template monaDropDownTreeNodeTemplate let-dataItem>
                                         <span style="color: #00a86b;">{{dataItem.text}}</span>
                                     </ng-template>
