--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -11,7 +11,7 @@
         <tbody>
             @if (gridService.groupColumns.length === 0) {
                 @for (row of data(); track row.uid) {
-                    <tr (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected}"
+                    <tr (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected()}"
                         [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                         @for (column of columns(); track $index) {
                             <td>
@@ -22,7 +22,7 @@
                 }
             } @else {
                 <ng-template #gridGroupTemplate let-groupData let-column="column" let-cx="cx" let-depth="depth">
-                        @if (groupData|gridGroup:column:gridService.pageState.page; as groupItem) {
+                        @if (groupData|gridGroup:column:gridService.pageState.page(); as groupItem) {
                             @for (subGroup of groupItem; track $index) {
                                 <tr class="mona-grid-grouping-row">
                                     @for (_ of gridService.groupColumns|monaSlice:0:cx; track $index) {
@@ -51,7 +51,7 @@
                                 @if (depth === gridService.groupColumns.length - 1 && !subGroup.collapsed) {
                                     @for (row of subGroup.rows; track row.uid) {
                                         <tr (click)="onGridRowClick($event, row)"
-                                            [ngClass]="{'mona-selected': row.selected}"
+                                            [ngClass]="{'mona-selected': row.selected()}"
                                             [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                                             @for (_ of gridService.groupColumns; track $index) {
                                                 <td></td>
