--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -19,17 +19,17 @@
                 @for (_ of gridService.groupColumns; track $index) {
                     <col style="width: 34px;">
                 }
-                @for (column of gridService.columns; track $index) {
+                @for (column of gridService.columns(); track $index) {
                     <col [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth">
                 }
             </colgroup>
             <thead>
-                <tr cdkDropList [cdkDropListConnectedTo]="groupable() ? [groupColumnList!] : []"
+                <tr cdkDropList [cdkDropListConnectedTo]="groupable() ? [groupColumnList()!] : []"
                     (cdkDropListDropped)="onColumnDrop($event)">
                     @for (_ of gridService.groupColumns; track $index) {
                         <td></td>
                     }
-                    @for (column of gridService.columns; track $index) {
+                    @for (column of gridService.columns(); track $index) {
                         <th cdkDrag [cdkDragData]="column" [cdkDragDisabled]="!reorderable() && !groupable()"
                             (mouseenter)="onColumnMouseEnter($event, column)"
                             (cdkDragEntered)="onColumnDragEnter($event, column)"
@@ -79,12 +79,12 @@
 </div>
 
 
-@if(gridService.rows|gridFilter:gridService.appliedFilters:gridService.appliedSorts; as filteredData) {
-    @if (filteredData|gridPage:gridService.pageState.skip:gridService.pageState.take; as viewData) {
-        <mona-grid-list [columns]="gridService.columns" [data]="viewData"></mona-grid-list>
-        <mona-pager [skip]="gridService.pageState.skip" [pageSize]="gridService.pageState.take"
-                    [total]="filteredData.length"
+<!--@if(gridService.rows()|gridFilter:gridService.appliedFilters():gridService.appliedSorts(); as filteredData) {-->
+<!--    @if (gridService.viewRows()|gridPage:gridService.pageState.skip():gridService.pageState.take(); as viewData) {-->
+        <mona-grid-list [columns]="gridService.columns()" [data]="gridService.viewPageRows()"></mona-grid-list>
+        <mona-pager [skip]="gridService.pageState.skip()" [pageSize]="gridService.pageState.take()"
+                    [total]="gridService.viewRowCount()"
                     [pageInput]="true" [pageSizeValues]="pageSizeValues()" [responsive]="responsivePager()"
                     (pageSizeChange)="onPageSizeChange($event)" (pageChange)="onPageChange($event)"></mona-pager>
-    }
-}
+<!--    }-->
+<!--}-->
