--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -39,7 +39,7 @@
                                                 }
                                             </button>
                                             <span class="mona-grid-grouping-row-text">{{ column.title }}
-                                                : {{ subGroup.rows[0].data[column.field] }}</span>
+                                                : {{ subGroup.rows[0].data[column.field()] }}</span>
                                         </td>
                                     }
                                 </tr>
