--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -38,8 +38,7 @@
                                                     <fa-icon [icon]="collapseIcon"></fa-icon>
                                                 }
                                             </button>
-                                            <span class="mona-grid-grouping-row-text">{{ column.title }}
-                                                : {{ subGroup.rows[0].data[column.field()] }}</span>
+                                            <span class="mona-grid-grouping-row-text">{{ column.title() }}: {{ subGroup.rows[0].data[column.field()] }}</span>
                                         </td>
                                     }
                                 </tr>
