fix: incorrect size check, a few refactors

--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -9,7 +9,7 @@
                     <span>{{ groupColumn.title() }}</span>
                 </mona-chip>
             }
-        } @else if (groupPanelPlaceholderVisible) {
+        } @else if (groupPanelPlaceholderVisible()) {
             <span class="mona-grid-group-panel-placeholder">Drag a column header here to group</span>
         }
     </div>
